--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -87,3 +87,9 @@ a:link{color:rgb(255, 255, 255)}
 	background-color: rgb(65, 65, 65);
 	border-radius: 5px;
 }
+
+.btnRounded{
+	border-radius: 50px;
+	padding-right: 40px;
+	padding-left: 40px;
+}
