--- a/src/main/resources/templates/MyPage/MypageTrash.html
+++ b/src/main/resources/templates/MyPage/MypageTrash.html
@@ -58,7 +58,7 @@
 	<div class="h-100">
 		<!-- 헤더 영역 -->
 		<header th:include="Header :: header" class="fixed-top px-0 mx-0"></header>
-		<div class="row bg2ndColor">
+		<div class="row bg2ndColor  h-100">
 			<!-- 네비게이션 영역 -->
 			<nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5"></nav>
 			<!-- 메인영역 -->
@@ -66,7 +66,7 @@
 				<div class="px-3 mt-4">
 					<div>
 						<h3 class="text-primary">
-							<b>삭제한 리뷰</b>
+							<b>Review Trash</b>
 						</h3>
 					</div>
 					<div>
