--- a/bin/main/templates/MyPage/MyPageReview.html
+++ b/bin/main/templates/MyPage/MyPageReview.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="bg-black h-100">
-    <div class="h-100">
+    <div>
         <!-- 헤더 영역 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
