mypage > 휴지통 : 하단 페이징 수정

--- a/bin/main/templates/MyPage/MyPageTrash.html
+++ b/bin/main/templates/MyPage/MyPageTrash.html
@@ -55,10 +55,10 @@
 </script>
 </head>
 <body class="bg-black">
-	<div class="h-100">
+	<div>
 		<!-- 헤더 영역 -->
 		<header th:include="Header :: header" class="fixed-top px-0 mx-0"></header>
-		<div class="row bg2ndColor  h-100">
+		<div class="row bg2ndColor h-100">
 			<!-- 네비게이션 영역 -->
 			<nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5"></nav>
 			<!-- 메인영역 -->
@@ -211,23 +211,23 @@
 
 
 						<!--  -->
-						<div th:if="${#lists.size(trash.getList())}>1">
-							<div class="mt-5" style="color: black;" id="paging">
-								<ul class="pagination justify-content-center custom-pagination">
+						<div th:if="${#lists.size(trash.getList())}>1" class="mb-5">
+							<div class="mt-5" id="paging">
+								<ul class="pagination justify-content-center custom-pagination text-white">
 									<li class="page-item"
-										th:classappend="${trash.getPrePage() == 0} ? 'disabled'"><a
-										class="page-link text-black"
+										th:classappend="${trash.getPrePage() == 0} ? 'd-none'"><a
+										class="page-link"
 										th:href="@{/mypage/trash(pageNum=${trash.getPrePage()})}">&lt;</a>
 									</li>
 									<li class="page-item"
 										th:each="page : ${#numbers.sequence(trash.getNavigateFirstPage(), trash.getNavigateLastPage())}"
 										th:classappend="${page == trash.getPageNum()} ? 'active'">
-										<a class="page-link text-black" th:text="${page}"
+										<a class="page-link" th:text="${page}"
 										th:href="@{/mypage/trash(pageNum=${page})}"></a>
 									</li>
 									<li class="page-item"
-										th:classappend="${trash.getNextPage() == 0} ? 'disabled'">
-										<a class="page-link text-black"
+										th:classappend="${trash.getNextPage() == 0} ? 'd-none'">
+										<a class="page-link"
 										th:href="@{/mypage/trash(pageNum=${trash.getNextPage()})}">&gt;</a>
 									</li>
 								</ul>
