--- a/bin/main/templates/MyPage/MyPageTrash.html
+++ b/bin/main/templates/MyPage/MyPageTrash.html
@@ -55,7 +55,7 @@
 </script>
 </head>
 <body class="bg-black">
-	<div>
+	<div class="h-100">
 		<!-- 헤더 영역 -->
 		<header th:include="Header :: header" class="fixed-top px-0 mx-0"></header>
 		<div class="row bg2ndColor h-100">
