--- a/bin/main/templates/MyPage/MyPageReview.html
+++ b/bin/main/templates/MyPage/MyPageReview.html
@@ -10,12 +10,12 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="bg-black h-100">
-    <div>
+    <div class="h-100">
         <!-- 헤더 영역 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
-        <div class="row bg2ndColor  h-100">
+        <div class="row bg2ndColor h-100">
             <!-- 네비게이션 영역 -->
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 h-100">
             </nav>
