--- a/bin/main/templates/MyPage/MypageWishlist.html
+++ b/bin/main/templates/MyPage/MypageWishlist.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="bg-black" style="height: 100%;">
-	<div>
+	<div class="h-100">
 		<!-- 헤더 영역 -->
 		<header th:include="Header :: header" class="fixed-top px-0 mx-0">
 		</header>
