--- a/src/main/resources/templates/movie/search.html
+++ b/src/main/resources/templates/movie/search.html
@@ -83,8 +83,8 @@ $(document).ready(()=>{
 <body class="bg-black">
 	<header th:include="header"></header>
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-4 mx-auto">
+			<div class="row w-100">
+				<div class="col-md-5 mx-auto">
 					<div class="input-group my-3">
 						<input type="text" id="search-bar" class="form-control" placeholder="영화 제목을 입력하세요">
 						<button type="button" id="btn-search" class="btn btn-outline-light">
