--- a/src/main/resources/templates/kobis/rank_list.html
+++ b/src/main/resources/templates/kobis/rank_list.html
@@ -79,7 +79,7 @@
                             for (var i = 0; i < response.length; i++) {
                                 let temp_html =  " <ul class=\"list-unstyled\">";
                                 temp_html += "<li class=\"h4\"><b><span>" + response[i].rank + "위</span></b></li>";
-                                temp_html += "<li class=\"h5\" ><b><span ><a href="+ tmdbMv+ response[i].movieNm+"\" target='_blank' >"+  response[i].movieNm +"</span></a></b></li>";
+                                temp_html += "<li class=\"h5\" ><b><span ><a href="+ naverMv+ response[i].movieNm+"\" target='_blank' title=\"네이버로 영화 검색\">"+  response[i].movieNm +"</span></a></b></li>";
                                 temp_html += "<li><span style=\"rgb(89, 89, 89)\">개봉일: " + response[i].openDt + "</span></li>";
                                 temp_html += " <li><span>누적관객수: " + response[i].audiAcc + "명</span></li>";
                                 temp_html += "<li><span><a href="+ megaMv + response[i].movieNm+"\" target='_blank'><img src=\"/images/mega.png\" style=\" height:20px;\"  alt=\"메가박스\" title=\"메가박스에서 예매\" id=\"mv\" class=\"me-2\"></img></a></span>"; 
