--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -37,15 +37,9 @@ li:hover {
 </head>
 <body>
 	<header th:fragment="header">
-		<div class="pt-3 px-3 pb-1 bg2ndColor mx-0">
+		<div class="py-3 px-2 bg2ndColor mx-0">
 			<nav class="watcat-nav">
-				<label class="logo ms-4 float-start">
-					<a href="/" class="h1 float-start  text-danger text-decoration-none"
-						style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; line-height : 80px; float:left">
-						WaTCaT</a>
-				</label>
-				
-					<div class="float-end mx-1 headerLink"
+					<div class="float-end mx-1 headerLink pt-2"
 						th:if="${session.userId != null}">
 						<div class="dropdown me-3">
 							<img src="/images/catIcon.png"
@@ -56,9 +50,9 @@ li:hover {
 							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1"
 								style="background-color: gray;">
 								<li><a class="dropdown-item " href="/mypage/wishlist"
-									style="color: white;">마이페이지</a></li>
+									>마이페이지</a></li>
 								<li><a class="dropdown-item btn-logout"
-									style="color: white;">로그아웃 </a></li>
+									>로그아웃 </a></li>
 							</ul>
 						</div>
 					</div>
@@ -68,13 +62,19 @@ li:hover {
 									fill="currentColor" class="bi bi-door-open-fill"
 									viewBox="0 0 16 16">
 								<path
-										d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
+									d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
 								</svg>
 								로그인	
 						</a>
 					</div>
 					
-				<ul class="me-5 text-white"id="nav-menu-item">
+				<div class="logo ms-4 float-start my-auto" style="line-height:100px; display:inline-block;">
+					<a href="/" class="h1 pt-2 float-start  text-danger text-decoration-none"
+						style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; line-height : 80px; float:left">
+						WaTCaT</a>
+				</div>	
+				
+				<ul class="ms-5 text-white float-start"id="nav-menu-item">
 					<li>
 						<a href="/">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
@@ -114,7 +114,9 @@ li:hover {
 						영화검색</a>
 					</li>
 				</ul>
-				<button class="mt-3 navbar-dark navbar-toggler float-end" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
+			
+				
+				<button class="pt-4 navbar-dark navbar-toggler float-end" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
 				      <span class="navbar-toggler-icon" ></span>
 				   </button> 
 			</nav>
@@ -217,7 +219,7 @@ li:hover {
 				      <div class="offcanvas-body">
 				      	<ul class="navbar-nav">
 				      	     
-				          <li class="nav-item me-auto">
+				          <li class="nav-item main-menu me-auto">
 				            <button class="container-fluid text-start text-white" onclick="location.href='/search'">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 									fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -228,7 +230,7 @@ li:hover {
 							</button>
 				          </li>
 				          
-				           <li class="nav-item me-auto">
+				           <li class="nav-item main-menu me-auto">
 				            	<button class="container-fluid text-start text-white" onclick="location.href='/'">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 									fill="currentColor" class="bi bi-journal-richtext"
@@ -244,7 +246,7 @@ li:hover {
 							</button>
 				          </li>
 				          
-				          <li class="nav-item me-auto">
+				          <li class="nav-item main-menu me-auto">
 				           	<button class="container-fluid text-start text-white" onclick="location.href='/watcat/kobis'">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 									fill="currentColor" class="bi bi-trophy-fill"
@@ -256,7 +258,7 @@ li:hover {
 							</button>
 				          </li>
 				          
-				           <li class="nav-item me-auto">
+				           <li class="nav-item main-menu me-auto">
 				            	<button class="container-fluid text-start text-white" onclick="location.href='/kobis/total'">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16">
 								  <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2z"/>
@@ -267,7 +269,7 @@ li:hover {
 				          
 				          <li class="page-nav-line"></li>
 				          
-				          <li class="nav-item" th:unless="${session.userId}!=null">
+				          <li class="nav-item account-menu" th:unless="${session.userId}!=null">
 				            <button class="container-fluid text-start text-danger" onclick="location.href='/login'">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 									fill="currentColor" class="bi bi-door-open-fill"
@@ -279,7 +281,7 @@ li:hover {
 
 							</button>
 				          </li>          
-				           <li class="nav-item"  th:if="${session.userId}!=null">
+				           <li class="nav-item account-menu"  th:if="${session.userId}!=null">
 				            <button class="container-fluid text-start text-danger text-start btn-logout">
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
 									fill="currentColor" class="bi bi-door-open-fill"
@@ -291,7 +293,7 @@ li:hover {
 							</button>
 				          </li>
 				          
-				          <li class="nav-item" th:if="${session.userId!=null}">
+				          <li class="nav-item account-menu" th:if="${session.userId!=null}">
 				            <button class="container-fluid text-start text-danger" onclick="location.href='/mypage/wishlist'">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
 								  <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
