form action태그 오타 수정

--- a/bin/main/templates/MyPage/MypageWishlist.html
+++ b/bin/main/templates/MyPage/MypageWishlist.html
@@ -53,7 +53,7 @@
                                     </li>
                                 </ul>
                                 <div >
-                                    <form action="/mypage/review" method="get" style="width: 400px;" class="mx-auto">
+                                    <form action="/mypage/wishlist" method="get" style="width: 400px;" class="mx-auto">
                                         <input type="text" th:value="${title}" id="title" name="title" class="w-100 form-control" style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;">
                                         <input type="submit" id="btnSearch" value="검색" class="w-100 btn btn-danger" style="border-top-left-radius: 0px; border-top-right-radius: 0px;">
                                     </form>
