헤더수정 nav수정

--- a/bin/main/templates/MyPage/MyPagePW.html
+++ b/bin/main/templates/MyPage/MyPagePW.html
@@ -33,7 +33,7 @@
         
         <div class="row bg2ndColor h-100">
             <!-- 네비게이션 영역 -->
-            <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 h-100">
+            <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 min-vh-100">
             </nav>
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">
