--- a/src/main/resources/templates/MyPage/MypageTrash.html
+++ b/src/main/resources/templates/MyPage/MypageTrash.html
@@ -67,9 +67,9 @@
 	<div class="h-100">
 		<!-- 헤더 영역 -->
 		<header th:include="Header :: header" class="fixed-top px-0 mx-0"></header>
-		<div class="row bg2ndColor h-100">
-			<!-- 네비게이션 영역 -->
-			<nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5"></nav>
+        <div class="row bg2ndColor h-100">
+            <!-- 네비게이션 영역 -->
+                <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 min-vh-100" ></nav>
 			<!-- 메인영역 -->
 			<main class="col-lg-9 bg-black " style="padding-top: 100px;">
 				<div class="px-3 mt-4">
