--- a/src/main/resources/templates/account/admin/reviewManagement.html
+++ b/src/main/resources/templates/account/admin/reviewManagement.html
@@ -66,9 +66,9 @@
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
-        <div class="row bg2ndColor">
+        <div class="row bg2ndColor h-100">
             <!-- 네비게이션 영역 -->
-            <nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5">
+                <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 min-vh-100" >
             </nav>
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">    
