--- a/bin/main/templates/account/admin/reviewManagement.html
+++ b/bin/main/templates/account/admin/reviewManagement.html
@@ -141,7 +141,7 @@
 						</ul>
 						
 						<section class="navbar">
-						  <form action="/admin/review" method="get"class="ms-auto me-5">
+						  <form action="/admin/review" method="get"class="ms-auto me-5 pb-5">
 						    <div class="input-group">
 						      <input type="text" name="query"class="form-control" placeholder="검색">
 						      <button class="input-group-text btn-info" id="search-bar">
