--- a/bin/main/templates/MyPage/MyPageReview.html
+++ b/bin/main/templates/MyPage/MyPageReview.html
@@ -8,9 +8,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/movieRec.css">
 </head>
 <body class="bg-black h-100">
-    <div class="h-100">
+    <div class="">
         <!-- 헤더 영역 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
@@ -20,8 +21,8 @@
                 <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 min-vh-100" >
             </nav>
             <!-- 메인영역 -->
-            <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">    
-                <div class="w-100 mx-auto mt-3">
+            <main class="col-lg-9 bg-black text-white" style="margin-top: 30px;">    
+                <div class="w-100 mt-lg-5 pt-lg-5 mx-2">
                     <h3 class="text-primary"><b>My Review</b></h3>
                     <div class="w-100">
                         <div class="w-100">
@@ -30,7 +31,7 @@
                                     <a th:href="@{/mypage/reviewDetail(idx=${list.idx})}"><img th:src="${list.poster}" width="200px" height="300px"></a>
                                 </div>
                                 <div class="p-2">
-                                    <p th:text="|제목 : ${list.title}|"></p>  
+                                    <p class="clamp" th:text="|제목 : ${list.title}|"></p>  
                                     <p th:text="|작성일 : ${list.createdDt}|"></p>
                                 </div>
                             </div>
@@ -53,8 +54,8 @@
                                     <a class="page-link" th:href="@{/mypage/review(pageNum=${reviewList.getNextPage()}, title=${title})}">Next</a>
                                     </li>
                                 </ul>
-                                <div >
-                                    <form action="/mypage/review" method="get" style="width: 400px;" class="mx-auto">
+                                <div>
+                                    <form action="/mypage/review" method="get" class="mx-auto w-100">
                                         <input type="text" th:value="${title}" id="title" name="title" class="w-100 form-control" style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;">
                                         <input type="submit" id="btnSearch" value="검색" class="w-100 btn btn-danger" style="border-top-left-radius: 0px; border-top-right-radius: 0px;">
                                     </form>
