--- a/src/main/resources/templates/MyPage/MypagePW.html
+++ b/src/main/resources/templates/MyPage/MypagePW.html
@@ -36,9 +36,9 @@
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 min-vh-100">
             </nav>
             <!-- 메인영역 -->
-            <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">
-                <div>
-                    <form action="/mypage/updatepw" method="post" class="mx-auto px-lg-5" style="width: 500px;">
+            <main class="col-lg-9 bg-black text-white" style="margin-top: 30px;">
+                <div class="w-100 mt-lg-5 pt-lg-5 mx-2 row">
+                    <form action="/mypage/updatepw" method="post" class="col-lg-6 mx-auto p-3">
                         <h3 class="my-5 text-primary text-center"><b>비밀번호 변경 하기</b></h3>
                         
                         <div class="form-floating bg-black">
