--- a/src/main/resources/templates/account/admin/accountManagement.html
+++ b/src/main/resources/templates/account/admin/accountManagement.html
@@ -118,7 +118,7 @@
 						</li>
 					</ul>
 					<section class="navbar">
-					  <form action="/admin/account" method="get" class="ms-auto me-5">
+					  <form action="/admin/account" method="get" class="ms-auto me-5 pb-5">
 					    <div class="input-group">
 					      <input type="text" name="query" class="form-control" placeholder="아이디 검색">
 					      <button type="submit"class="input-group-text btn btn-info" id="search-bar">
