--- a/src/main/resources/templates/MyPage/MypageReviewDetail.html
+++ b/src/main/resources/templates/MyPage/MypageReviewDetail.html
@@ -77,7 +77,7 @@
         
         <div class="row bg2ndColor h-100">
             <!-- 네비게이션 영역 -->
-                <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 min-vh-100" >
+                <nav th:include="MyPage/nav :: nav" class="col-lg-3 px-5 min-vh-100" >
             </nav>
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white" style="margin-top: 30px;">    
